--- a/max-age/.htaccess
+++ b/max-age/.htaccess
@@ -3,12 +3,9 @@
 # ExpiresActive On
 # ExpiresDefault "access plus 1 years"
 
-RewriteEngine on
-RewriteRule .*\.git/.* - [F]
-
 <IfModule mod_headers.c>
     # Images
-    <FilesMatch "\.(jpg|jpeg|png|gif|ico)$">
+    <FilesMatch "\.(jpg|jpeg|png|gif)$">
         Header set Cache-Control "max-age=604800, public"
     </FilesMatch>
 
@@ -17,8 +14,8 @@ RewriteRule .*\.git/.* - [F]
         Header set Cache-Control "max-age=604800"
     </FilesMatch>
 
-    # HTML cached for 1 day
-    <FilesMatch "\.(htm|html)$"> 
-        Header set Cache-Control "max-age=86400, public"
+    # HTML
+    <FilesMatch "\.(htm|html)$">
+        Header set Cache-Control "max-age=30"
     </FilesMatch>
 </IfModule>
